fix visual issue: better zone placement background of object was too big etc.

--- a/website/src/app/labyrinth/game-view/labyrinth-game.component.css
+++ b/website/src/app/labyrinth/game-view/labyrinth-game.component.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 700px 50px;
+  grid-template-columns: 750px 50px;
   grid-template-rows: 650px 50px;
   grid-template-areas:
     "main sidebar"
