--- a/website/src/app/labyrinth/game-view/level-view/level-view.component.css
+++ b/website/src/app/labyrinth/game-view/level-view/level-view.component.css
@@ -1,6 +1,6 @@
 .levelRowRender{
   display: grid;
-  grid-template-columns: repeat(auto-fit, 220px);
+  grid-template-columns: repeat(auto-fit, 240px);
   grid-template-rows: repeat(auto-fit, 210px);
 }
 
