--- a/website/src/app/labyrinth/game-view/level-view/zone-view/zone-view.component.css
+++ b/website/src/app/labyrinth/game-view/level-view/zone-view/zone-view.component.css
@@ -14,5 +14,4 @@
   z-index: -100;
 }
 .zoneObject {
-  background-color: white;
 }
